b46: Fix freetag canvas cloud default z-index for the bootstrap bar

--- a/templates/b46/style.css
+++ b/templates/b46/style.css
@@ -1102,6 +1102,8 @@ details summary {
   .serendipity_freetag_taglist ul {
     border: 1px outset #f0ffff;
     background: #f0f8ff; }
+  .freetag_wordcloud canvas {
+    z-index: 1028 !important; }
 
 .serendipity_freetag_taglist_related {
   font-size: 18px;
